--- a/XDBF/mainwindow.ui
+++ b/XDBF/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>467</width>
-    <height>373</height>
+    <height>408</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -48,6 +48,13 @@
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
          <string>Inject Entry</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="text">
+         <string>Remove Selected Entries/Entry</string>
         </property>
        </widget>
       </item>
