--- a/XDBF/settinginjectorint.ui
+++ b/XDBF/settinginjectorint.ui
@@ -10,17 +10,11 @@
     <height>72</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>212</width>
-    <height>72</height>
-   </size>
-  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
