--- a/XDBF/newentrychooser.ui
+++ b/XDBF/newentrychooser.ui
@@ -6,27 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>214</width>
-    <height>94</height>
+    <width>198</width>
+    <height>79</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>214</width>
-    <height>94</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>214</width>
-    <height>94</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>New Entry Type</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
