added setting inject of types, int32, int64, float, double, and string

--- a/XDBF/images.qrc
+++ b/XDBF/images.qrc
@@ -7,5 +7,6 @@
         <file>images/add.png</file>
         <file>images/continue.png</file>
         <file>images/open.png</file>
+        <file>images/extract.png</file>
     </qresource>
 </RCC>
