--- a/XDBF/mainwindow.ui
+++ b/XDBF/mainwindow.ui
@@ -45,13 +45,6 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="text">
-         <string>Inject Entry</string>
-        </property>
-       </widget>
-      </item>
-      <item>
        <widget class="QPushButton" name="pushButton_3">
         <property name="text">
          <string>Remove Selected Entries/Entry</string>
@@ -78,7 +71,15 @@
     <addaction name="actionOpen"/>
     <addaction name="actionClose"/>
    </widget>
+   <widget class="QMenu" name="menuTools">
+    <property name="title">
+     <string>Entries</string>
+    </property>
+    <addaction name="actionAdd_New_Entry"/>
+    <addaction name="actionExtract_All"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuTools"/>
   </widget>
   <action name="actionOpen">
    <property name="icon">
@@ -91,7 +92,25 @@
   </action>
   <action name="actionClose">
    <property name="text">
-    <string>Close</string>
+    <string>Close GPD</string>
+   </property>
+  </action>
+  <action name="actionAdd_New_Entry">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add New</string>
+   </property>
+  </action>
+  <action name="actionExtract_All">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/extract.png</normaloff>:/images/extract.png</iconset>
+   </property>
+   <property name="text">
+    <string>Extract All</string>
    </property>
   </action>
  </widget>
