--- a/XDBF/achievementinjectordialog.ui
+++ b/XDBF/achievementinjectordialog.ui
@@ -10,6 +10,12 @@
     <height>302</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>495</width>
+    <height>16777215</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Achievement Adder Dialog</string>
   </property>
@@ -190,12 +196,6 @@ p, li { white-space: pre-wrap; }
    </item>
    <item row="2" column="1">
     <widget class="QLabel" name="typeDescLbl">
-     <property name="minimumSize">
-      <size>
-       <width>161</width>
-       <height>71</height>
-      </size>
-     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
