--- a/XDBF/settinginjectorint.ui
+++ b/XDBF/settinginjectorint.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>249</width>
-    <height>99</height>
+    <width>252</width>
+    <height>127</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
@@ -41,11 +41,19 @@ p, li { white-space: pre-wrap; }
      <item row="1" column="1">
       <widget class="QComboBox" name="comboBox">
        <property name="editable">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
+       <item>
+        <property name="text">
+         <string>User Defined</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item row="2" column="0" colspan="2">
+      <widget class="QLineEdit" name="lineEdit"/>
+     </item>
+     <item row="3" column="0" colspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="pushButton_2">
