added gpd creating tool

--- a/XDBF/mainwindow.ui
+++ b/XDBF/mainwindow.ui
@@ -61,6 +61,7 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
     <addaction name="actionClose"/>
    </widget>
@@ -130,6 +131,15 @@
    </property>
    <property name="text">
     <string>Clean GPD</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
+   </property>
+   <property name="text">
+    <string>New</string>
    </property>
   </action>
  </widget>
