made the gpd creator a lot better

--- a/XDBF/images.qrc
+++ b/XDBF/images.qrc
@@ -10,5 +10,6 @@
         <file>images/extract.png</file>
         <file>images/convert.png</file>
         <file>images/clean.png</file>
+        <file>images/default image.png</file>
     </qresource>
 </RCC>
