--- a/XDBF/mainwindow.ui
+++ b/XDBF/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>473</width>
-    <height>408</height>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -96,6 +96,10 @@
    </property>
   </action>
   <action name="actionClose">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/images/close.png</normaloff>:/images/close.png</iconset>
+   </property>
    <property name="text">
     <string>Close GPD</string>
    </property>
