--- a/XDBF/mainwindow.ui
+++ b/XDBF/mainwindow.ui
@@ -96,6 +96,9 @@
    </property>
   </action>
   <action name="actionClose">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="images.qrc">
      <normaloff>:/images/close.png</normaloff>:/images/close.png</iconset>
