--- a/XDBF/newgpddialog.ui
+++ b/XDBF/newgpddialog.ui
@@ -6,21 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>253</width>
-    <height>70</height>
+    <width>318</width>
+    <height>88</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>253</width>
-    <height>70</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>253</width>
-    <height>70</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>New GPD Dialog</string>
@@ -31,7 +19,11 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>GPD Type:</string>
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;GPD Type:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -63,6 +55,9 @@
         <iconset resource="images.qrc">
          <normaloff>:/images/cancel.png</normaloff>:/images/cancel.png</iconset>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item row="1" column="2">
@@ -73,6 +68,9 @@
        <property name="icon">
         <iconset resource="images.qrc">
          <normaloff>:/images/continue.png</normaloff>:/images/continue.png</iconset>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
