--- a/XDBF/synclistdialog.ui
+++ b/XDBF/synclistdialog.ui
@@ -117,6 +117,9 @@
          <property name="text">
           <string>--&gt;</string>
          </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
        <item>
@@ -129,6 +132,9 @@
          </property>
          <property name="text">
           <string>&lt;--</string>
+         </property>
+         <property name="autoDefault">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -223,6 +229,9 @@ p, li { white-space: pre-wrap; }
         <iconset resource="images.qrc">
          <normaloff>:/images/cancel.png</normaloff>:/images/cancel.png</iconset>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -233,6 +242,9 @@ p, li { white-space: pre-wrap; }
        <property name="icon">
         <iconset resource="images.qrc">
          <normaloff>:/images/save.png</normaloff>:/images/save.png</iconset>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
